parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> BLOC
Rule 2     BLOC -> BLOC statement SEMICOLON
Rule 3     BLOC -> statement SEMICOLON
Rule 4     statement -> PRINT LPAREN expression RPAREN
Rule 5     statement -> FONCTION NAME LPAREN RPAREN LACOL BLOC RACOL
Rule 6     statement -> NAME LPAREN RPAREN
Rule 7     statement -> FONCTION NAME LPAREN expression RPAREN LACOL BLOC RACOL
Rule 8     statement -> NAME LPAREN expression RPAREN
Rule 9     statement -> PRINTSTR LPAREN STR RPAREN
Rule 10    statement -> WHILE LPAREN expression RPAREN LACOL BLOC RACOL
Rule 11    statement -> IF LPAREN expression RPAREN LACOL BLOC RACOL
Rule 12    statement -> IF LPAREN expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
Rule 13    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL
Rule 14    statement -> NAME AFFECT expression
Rule 15    statement -> NAME PLUS PLUS
Rule 16    statement -> NAME PLUS AFFECT expression
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression SAME expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> NUMBER
Rule 24    expression -> NAME
Rule 25    expression -> TRUE
Rule 26    expression -> FALSE
Rule 27    expression -> expression AND expression
Rule 28    expression -> expression OR expression
Rule 29    expression -> expression INFTO expression
Rule 30    expression -> expression SUPTO expression

Terminals, with rules where they appear

AFFECT               : 14 16
AND                  : 27
DIVIDE               : 21
ELSE                 : 12
FALSE                : 26
FONCTION             : 5 7
FOR                  : 13
IF                   : 11 12
INFTO                : 29
LACOL                : 5 7 10 11 12 12 13
LPAREN               : 4 5 6 7 8 9 10 11 12 13 22
MINUS                : 20
NAME                 : 5 6 7 8 14 15 16 24
NUMBER               : 23
OR                   : 28
PLUS                 : 15 15 16 17
PRINT                : 4
PRINTSTR             : 9
RACOL                : 5 7 10 11 12 12 13
RPAREN               : 4 5 6 7 8 9 10 11 12 13 22
SAME                 : 19
SEMICOLON            : 2 3 13 13
STR                  : 9
SUPTO                : 30
TIMES                : 18
TRUE                 : 25
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

BLOC                 : 1 2 5 7 10 11 12 12 13
START                : 0
expression           : 4 7 8 10 11 12 13 14 16 17 17 18 18 19 19 20 20 21 21 22 27 27 28 28 29 29 30 30
statement            : 2 3 13 13

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . BLOC
    (2) BLOC -> . BLOC statement SEMICOLON
    (3) BLOC -> . statement SEMICOLON
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . FONCTION NAME LPAREN RPAREN LACOL BLOC RACOL
    (6) statement -> . NAME LPAREN RPAREN
    (7) statement -> . FONCTION NAME LPAREN expression RPAREN LACOL BLOC RACOL
    (8) statement -> . NAME LPAREN expression RPAREN
    (9) statement -> . PRINTSTR LPAREN STR RPAREN
    (10) statement -> . WHILE LPAREN expression RPAREN LACOL BLOC RACOL
    (11) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL
    (12) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL
    (14) statement -> . NAME AFFECT expression
    (15) statement -> . NAME PLUS PLUS
    (16) statement -> . NAME PLUS AFFECT expression

    PRINT           shift and go to state 4
    FONCTION        shift and go to state 5
    NAME            shift and go to state 6
    PRINTSTR        shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10

    START                          shift and go to state 1
    BLOC                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> START .



state 2

    (1) START -> BLOC .
    (2) BLOC -> BLOC . statement SEMICOLON
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . FONCTION NAME LPAREN RPAREN LACOL BLOC RACOL
    (6) statement -> . NAME LPAREN RPAREN
    (7) statement -> . FONCTION NAME LPAREN expression RPAREN LACOL BLOC RACOL
    (8) statement -> . NAME LPAREN expression RPAREN
    (9) statement -> . PRINTSTR LPAREN STR RPAREN
    (10) statement -> . WHILE LPAREN expression RPAREN LACOL BLOC RACOL
    (11) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL
    (12) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL
    (14) statement -> . NAME AFFECT expression
    (15) statement -> . NAME PLUS PLUS
    (16) statement -> . NAME PLUS AFFECT expression

    $end            reduce using rule 1 (START -> BLOC .)
    PRINT           shift and go to state 4
    FONCTION        shift and go to state 5
    NAME            shift and go to state 6
    PRINTSTR        shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10

    statement                      shift and go to state 11

state 3

    (3) BLOC -> statement . SEMICOLON

    SEMICOLON       shift and go to state 12


state 4

    (4) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 13


state 5

    (5) statement -> FONCTION . NAME LPAREN RPAREN LACOL BLOC RACOL
    (7) statement -> FONCTION . NAME LPAREN expression RPAREN LACOL BLOC RACOL

    NAME            shift and go to state 14


state 6

    (6) statement -> NAME . LPAREN RPAREN
    (8) statement -> NAME . LPAREN expression RPAREN
    (14) statement -> NAME . AFFECT expression
    (15) statement -> NAME . PLUS PLUS
    (16) statement -> NAME . PLUS AFFECT expression

    LPAREN          shift and go to state 15
    AFFECT          shift and go to state 16
    PLUS            shift and go to state 17


state 7

    (9) statement -> PRINTSTR . LPAREN STR RPAREN

    LPAREN          shift and go to state 18


state 8

    (10) statement -> WHILE . LPAREN expression RPAREN LACOL BLOC RACOL

    LPAREN          shift and go to state 19


state 9

    (11) statement -> IF . LPAREN expression RPAREN LACOL BLOC RACOL
    (12) statement -> IF . LPAREN expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL

    LPAREN          shift and go to state 20


state 10

    (13) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL

    LPAREN          shift and go to state 21


state 11

    (2) BLOC -> BLOC statement . SEMICOLON

    SEMICOLON       shift and go to state 22


state 12

    (3) BLOC -> statement SEMICOLON .

    PRINT           reduce using rule 3 (BLOC -> statement SEMICOLON .)
    FONCTION        reduce using rule 3 (BLOC -> statement SEMICOLON .)
    NAME            reduce using rule 3 (BLOC -> statement SEMICOLON .)
    PRINTSTR        reduce using rule 3 (BLOC -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (BLOC -> statement SEMICOLON .)
    IF              reduce using rule 3 (BLOC -> statement SEMICOLON .)
    FOR             reduce using rule 3 (BLOC -> statement SEMICOLON .)
    $end            reduce using rule 3 (BLOC -> statement SEMICOLON .)
    RACOL           reduce using rule 3 (BLOC -> statement SEMICOLON .)


state 13

    (4) statement -> PRINT LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 24

state 14

    (5) statement -> FONCTION NAME . LPAREN RPAREN LACOL BLOC RACOL
    (7) statement -> FONCTION NAME . LPAREN expression RPAREN LACOL BLOC RACOL

    LPAREN          shift and go to state 29


state 15

    (6) statement -> NAME LPAREN . RPAREN
    (8) statement -> NAME LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    RPAREN          shift and go to state 30
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 31

state 16

    (14) statement -> NAME AFFECT . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 32

state 17

    (15) statement -> NAME PLUS . PLUS
    (16) statement -> NAME PLUS . AFFECT expression

    PLUS            shift and go to state 33
    AFFECT          shift and go to state 34


state 18

    (9) statement -> PRINTSTR LPAREN . STR RPAREN

    STR             shift and go to state 35


state 19

    (10) statement -> WHILE LPAREN . expression RPAREN LACOL BLOC RACOL
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 36

state 20

    (11) statement -> IF LPAREN . expression RPAREN LACOL BLOC RACOL
    (12) statement -> IF LPAREN . expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 37

state 21

    (13) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL
    (4) statement -> . PRINT LPAREN expression RPAREN
    (5) statement -> . FONCTION NAME LPAREN RPAREN LACOL BLOC RACOL
    (6) statement -> . NAME LPAREN RPAREN
    (7) statement -> . FONCTION NAME LPAREN expression RPAREN LACOL BLOC RACOL
    (8) statement -> . NAME LPAREN expression RPAREN
    (9) statement -> . PRINTSTR LPAREN STR RPAREN
    (10) statement -> . WHILE LPAREN expression RPAREN LACOL BLOC RACOL
    (11) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL
    (12) statement -> . IF LPAREN expression RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL
    (14) statement -> . NAME AFFECT expression
    (15) statement -> . NAME PLUS PLUS
    (16) statement -> . NAME PLUS AFFECT expression

    PRINT           shift and go to state 4
    FONCTION        shift and go to state 5
    NAME            shift and go to state 6
    PRINTSTR        shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10

    statement                      shift and go to state 38

state 22

    (2) BLOC -> BLOC statement SEMICOLON .

    PRINT           reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    FONCTION        reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    NAME            reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    PRINTSTR        reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    WHILE           reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    IF              reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    FOR             reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    $end            reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)
    RACOL           reduce using rule 2 (BLOC -> BLOC statement SEMICOLON .)


state 23

    (22) expression -> LPAREN . expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 39

state 24

    (4) statement -> PRINT LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . SAME expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (29) expression -> expression . INFTO expression
    (30) expression -> expression . SUPTO expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 41
    TIMES           shift and go to state 42
    SAME            shift and go to state 43
    MINUS           shift and go to state 44
    DIVIDE          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    INFTO           shift and go to state 48
    SUPTO           shift and go to state 49


state 25

    (23) expression -> NUMBER .

    RPAREN          reduce using rule 23 (expression -> NUMBER .)
    PLUS            reduce using rule 23 (expression -> NUMBER .)
    TIMES           reduce using rule 23 (expression -> NUMBER .)
    SAME            reduce using rule 23 (expression -> NUMBER .)
    MINUS           reduce using rule 23 (expression -> NUMBER .)
    DIVIDE          reduce using rule 23 (expression -> NUMBER .)
    AND             reduce using rule 23 (expression -> NUMBER .)
    OR              reduce using rule 23 (expression -> NUMBER .)
    INFTO           reduce using rule 23 (expression -> NUMBER .)
    SUPTO           reduce using rule 23 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 23 (expression -> NUMBER .)


state 26

    (24) expression -> NAME .

    RPAREN          reduce using rule 24 (expression -> NAME .)
    PLUS            reduce using rule 24 (expression -> NAME .)
    TIMES           reduce using rule 24 (expression -> NAME .)
    SAME            reduce using rule 24 (expression -> NAME .)
    MINUS           reduce using rule 24 (expression -> NAME .)
    DIVIDE          reduce using rule 24 (expression -> NAME .)
    AND             reduce using rule 24 (expression -> NAME .)
    OR              reduce using rule 24 (expression -> NAME .)
    INFTO           reduce using rule 24 (expression -> NAME .)
    SUPTO           reduce using rule 24 (expression -> NAME .)
    SEMICOLON       reduce using rule 24 (expression -> NAME .)


state 27

    (25) expression -> TRUE .

    RPAREN          reduce using rule 25 (expression -> TRUE .)
    PLUS            reduce using rule 25 (expression -> TRUE .)
    TIMES           reduce using rule 25 (expression -> TRUE .)
    SAME            reduce using rule 25 (expression -> TRUE .)
    MINUS           reduce using rule 25 (expression -> TRUE .)
    DIVIDE          reduce using rule 25 (expression -> TRUE .)
    AND             reduce using rule 25 (expression -> TRUE .)
    OR              reduce using rule 25 (expression -> TRUE .)
    INFTO           reduce using rule 25 (expression -> TRUE .)
    SUPTO           reduce using rule 25 (expression -> TRUE .)
    SEMICOLON       reduce using rule 25 (expression -> TRUE .)


state 28

    (26) expression -> FALSE .

    RPAREN          reduce using rule 26 (expression -> FALSE .)
    PLUS            reduce using rule 26 (expression -> FALSE .)
    TIMES           reduce using rule 26 (expression -> FALSE .)
    SAME            reduce using rule 26 (expression -> FALSE .)
    MINUS           reduce using rule 26 (expression -> FALSE .)
    DIVIDE          reduce using rule 26 (expression -> FALSE .)
    AND             reduce using rule 26 (expression -> FALSE .)
    OR              reduce using rule 26 (expression -> FALSE .)
    INFTO           reduce using rule 26 (expression -> FALSE .)
    SUPTO           reduce using rule 26 (expression -> FALSE .)
    SEMICOLON       reduce using rule 26 (expression -> FALSE .)


state 29

    (5) statement -> FONCTION NAME LPAREN . RPAREN LACOL BLOC RACOL
    (7) statement -> FONCTION NAME LPAREN . expression RPAREN LACOL BLOC RACOL
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    RPAREN          shift and go to state 50
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 51

state 30

    (6) statement -> NAME LPAREN RPAREN .

    SEMICOLON       reduce using rule 6 (statement -> NAME LPAREN RPAREN .)
    RPAREN          reduce using rule 6 (statement -> NAME LPAREN RPAREN .)


state 31

    (8) statement -> NAME LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . SAME expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (29) expression -> expression . INFTO expression
    (30) expression -> expression . SUPTO expression

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 41
    TIMES           shift and go to state 42
    SAME            shift and go to state 43
    MINUS           shift and go to state 44
    DIVIDE          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    INFTO           shift and go to state 48
    SUPTO           shift and go to state 49


state 32

    (14) statement -> NAME AFFECT expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . SAME expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (29) expression -> expression . INFTO expression
    (30) expression -> expression . SUPTO expression

    SEMICOLON       reduce using rule 14 (statement -> NAME AFFECT expression .)
    RPAREN          reduce using rule 14 (statement -> NAME AFFECT expression .)
    PLUS            shift and go to state 41
    TIMES           shift and go to state 42
    SAME            shift and go to state 43
    MINUS           shift and go to state 44
    DIVIDE          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    INFTO           shift and go to state 48
    SUPTO           shift and go to state 49


state 33

    (15) statement -> NAME PLUS PLUS .

    SEMICOLON       reduce using rule 15 (statement -> NAME PLUS PLUS .)
    RPAREN          reduce using rule 15 (statement -> NAME PLUS PLUS .)


state 34

    (16) statement -> NAME PLUS AFFECT . expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression SAME expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME
    (25) expression -> . TRUE
    (26) expression -> . FALSE
    (27) expression -> . expression AND expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression INFTO expression
    (30) expression -> . expression SUPTO expression

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 25
    NAME            shift and go to state 26
    TRUE            shift and go to state 27
    FALSE           shift and go to state 28

    expression                     shift and go to state 53

state 35

    (9) statement -> PRINTSTR LPAREN STR . RPAREN

    RPAREN          shift and go to state 54


state 36

    (10) statement -> WHILE LPAREN expression . RPAREN LACOL BLOC RACOL
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . SAME expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (29) expression -> expression . INFTO expression
    (30) expression -> expression . SUPTO expression

    RPAREN          shift and go to state 55
    PLUS            shift and go to state 41
    TIMES           shift and go to state 42
    SAME            shift and go to state 43
    MINUS           shift and go to state 44
    DIVIDE          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    INFTO           shift and go to state 48
    SUPTO           shift and go to state 49


state 37

    (11) statement -> IF LPAREN expression . RPAREN LACOL BLOC RACOL
    (12) statement -> IF LPAREN expression . RPAREN LACOL BLOC RACOL ELSE LACOL BLOC RACOL
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . SAME expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (27) expression -> expression . AND expression
    (28) expression -> expression . OR expression
    (29) expression -> expression . INFTO expression
    (30) expression -> expression . SUPTO expression

    RPAREN          shift and go to state 56
    PLUS            shift and go to state 41
    TIMES           shift and go to state 42
    SAME            shift and go to state 43
    MINUS           shift and go to state 44
    DIVIDE          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    INFTO           shift and go to state 48
    SUPTO           shift and go to state 49


state 38

    (13) statement -> FOR LPAREN statement . SEMICOLON expression SEMICOLON statement RPAREN LACOL BLOC RACOL

    SEMICOLON       shift and go to state 57


state 39

    (22) expression -> LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . TIMES expression
